# mdbook-ref-resolver

./: Cargo.toml  README.md  package.json
.github/environments/: crates-io.json
.github/workflows/: audit.yml  ci.yml  publish.yaml
src/: config.rs  error.rs  lib.rs  main.rs  preprocessor.rs  resolver.rs
tests/: integration.rs
tests/fixtures/test-book/: book.toml
tests/fixtures/test-book/src/: chapter1.md
