[package]
name = "mdbook-ref-resolver"
version = "0.1.0"
edition = "2021"
authors = ["aRustyDev <36318507+aRustyDev@users.noreply.github.com>"]
description = "MDBook preprocessor to expand short references (adr:, docs:, gh:, etc.) to full paths"
license = "GPL-3.0-or-later"
repository = "https://github.com/aRustyDev/mdbook-ref-resolver"
keywords = ["mdbook", "preprocessor", "markdown", "references", "links"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
mdbook = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
glob = "0.3"
# IMPORTANT: Must use toml 0.5 to match mdbook's version!
# Using 0.8+ will cause type conflicts with mdbook's Table type.
toml = "0.5"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"

[[bin]]
name = "mdbook-ref-resolver"
path = "src/main.rs"

[lib]
name = "mdbook_ref_resolver"
path = "src/lib.rs"
